kubernetes/post-installs/ingress-nginx/ingress-nginx.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-nginx
  namespace: default
spec:
  ingressClassName: nginx
  rules:
    - host: jenkins.dimarino.local
      http:
        paths:
          - path: "/"
            pathType: Prefix
            backend:
              service:
                name: jenkins
                port:
                  number: 80
